Remove optionality for third arguments for py files; deal with defaulting to Derivatives in run.sh. create thumbnails/subjectID/subject.png structure

--- a/index.html
+++ b/index.html
@@ -254,7 +254,7 @@
             if (!STEP_NAMES[state]){
                 return null;
             }
-            return THUMBNAILS_RELATIVEPATH + subjects[subjectIndex] + STEP_NAMES[state];
+            return THUMBNAILS_RELATIVEPATH + subjects[subjectIndex] + "/" + subjects[subjectIndex] + STEP_NAMES[state];
         }
 
 
