--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
         }
 
         .progressCompleted {
-            background-color: #B0B0B0;
+            background-color: #000080;
             padding: 0px;
             width: 0%; /* Adjust with JavaScript */
             height: 6px;
@@ -67,12 +67,13 @@
         }
 
         .progressShown {
-            background-color: #000080;
+            position: relative;
+            background-color: #B0B0B0;
             padding: 0px;
-            vertical-align: middle;
-            height: 5px;
-            width: 0%; /* Adjust with JavaScript */
-            border-radius: 3px;
+            left: 0%; /* Adjust with JavaScript */
+            height: 6px;
+            width: 6px;
+            border-radius: 2px;
         }
 
         #images  {
@@ -582,7 +583,7 @@
 
                     var showPct = 0;
                     showPct = (stateToShow / (SHORT_NAMES.length - 1)) / statePct;
-                    document.getElementById("progressShown" + subjectIndex).style.width = 100 * showPct + "%";
+                    document.getElementById("progressShown" + subjectIndex).style.left = 100 * showPct + "%";
                 }
             }
             
