--- a/index.html
+++ b/index.html
@@ -126,13 +126,13 @@
              "initial cortex mask", "scrubbed cortex", "topo-corrected", "inner cortex mask",
              "inner cortex", "pial cortex", "hemisphere split", "bdp", "svreg"];
 
-        //Must match cse.py
+        //Must match brainsuiteWorkflow.py
         const THUMBNAIL_SUFFIX =
             [".png", ".bse.png", ".bfc.png", ".pvc.label.png", ".cerebrum.png", ".init.cortex.png",
              ".cortex.scrubbed.png", ".cortex.tca.png", ".cortex.dewisp.png", ".inner.cortex.png",
              ".pial.cortex.png", ".left.png", ".bdp.png", ".svreg.png"];
         
-        //Must match cse.py
+        //Must match brainsuiteWorkflow.py
         const STATS_SUFFIX =
             ["-mri.json", "-bse.json", "-bfc.json", "-pvc.json", "-cerebro.json", "-cortex.json",
              "-scrubmask.json", "-tca.json", "-dewisp.json", "-dfs.json", "-pialmesh.json",
