--- a/index.html
+++ b/index.html
@@ -158,6 +158,8 @@
         var statsCache = [];
         var demographics = [];
 
+        var STATS_STEPS = [1, 3]; //Steps that support stats
+
         function initPaths(){
             var docURL = document.URL.toString();
             BASE_URL = docURL.substring(0, docURL.lastIndexOf("/"));
@@ -474,7 +476,7 @@
                 loadIntoStatsCache(selectedSubjectIndex, i);
 
                 
-                if(i == 1 || i == 3){
+                if(STATS_STEPS.indexOf(i) != -1){
                     //TODO HARDCODE of first value
                     doStats(i, statsCache[selectedSubjectIndex][i]["Values"][0]["Z-Score"], divToAdd, imgToAdd, "white");
                 }else{
@@ -501,7 +503,7 @@
                     //$("#trayDialog").dialog("option", "height", $(window).height() * 0.7);
                     
                     clickedStepForDialog = $(this).attr("imgStepNum");
-                    if(clickedStepForDialog == 1 || clickedStepForDialog == 3){
+                    if(STATS_STEPS.indexOf(clickedStepForDialog) != -1){
                         dialog_stdev($(this));
                     }else{
                         dialog_none($(this));
@@ -583,8 +585,7 @@
 
         function updateErrorLevelAndBorder(subjectIndex, maxState){
             for(var stateLoop = 0 ; stateLoop <= maxState ; stateLoop++){
-                if(stateLoop === 1 || stateLoop === 3){
-                    //TODO hardcode 1 or 3
+                if(STATS_STEPS.indexOf(stateLoop) != -1){
 
                     loadIntoStatsCache(subjectIndex, stateLoop);
 
