Help on index.html changed

--- a/index.html
+++ b/index.html
@@ -944,12 +944,13 @@
 
                 <h5>Using the subject gallery</h5>
                 <p>
-                Click on any subject in the subject gallery to change which subject is shown 
+                Click on any subject in the subject gallery to change which subject is shown
                 in the subject tray. The box for the selected subject is outlined
                 in blue. At the bottom of the box for each subject is a progress bar.
-                The grey bar represents the number of stages that have been completed so far,
-                and the blue bar represents what stage is currently being shown in the
-                subject box. Use the "show stage" slider in the control menu to change which
+                The colored bar represents the number of stages that have been completed so far.
+                The bar is blue while processing is in progress, and purple when processing is complete.
+                The grey circle indicates what stage is currently being shown.
+                Use the "show stage" slider in the control menu to change which
                 stage is shown. If the selected stage from the slider is greater than
                 the completed stage, the displayed stage is set to the maximum possible stage.
                 </p>
